# dataimporttopostgresqlwithrust

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/data/: tmdb.csv
src/libraries/: cache_manager.rs  db_handler.rs  mod.rs
src/model/: mod.rs  movie_model.rs
