[package]
name = "tmdbdataimportpostgres"
version = "0.1.0"
edition = "2021"

[dependencies]

csv= "1.2"
serde={version = "1.0", features = ["derive"]}
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
rust_decimal={ version = "1.7", features = ["db-postgres"] }
postgres = {version = "0.19", features = ["with-chrono-0_4"]}
serde_json = "1.0.138"